arreglamos el problema al acceder a los pedidos